--- a/css/eight_ball.css
+++ b/css/eight_ball.css
@@ -61,3 +61,23 @@ h1 {
 	font-size: 20px;
 	font-family: inherit;
 }
+
+::-webkit-input-placeholder {
+   color: red;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+   color: red;  
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+   color: red;  
+}
+
+:-ms-input-placeholder {  
+   color: red;  
+}
+
+@media () {
+
+}
